stageleft/tests/compile-fail/unresolved_identifier.rs
use stageleft::*;

fn main() {
    let _x = q!({
        let abc = 123;
        let def = 456;
        xyz
    });
}
